fix: react 시리즈 description 수정

--- a/_posts/2025-12-16-react-3.md
+++ b/_posts/2025-12-16-react-3.md
@@ -1,6 +1,6 @@
 ---
 title: "React props를 컴포넌트 API로 설계하기"
-description: "state와 props 소유권, 파생 state 위험, 상태 끌어올리기 기준을 정리"
+description: "props를 컴포넌트 API로 설계하고 children·slot·분리 기준을 다루는 가이드"
 categories: ["🔵 React & Frontend"]
 tags: ["State", "Props", "DerivedState", "LiftingState"]
 image: /assets/posts/2025-12-16-react/image.png
