--- a/_posts/2025-12-16-react-4.md
+++ b/_posts/2025-12-16-react-4.md
@@ -1,6 +1,6 @@
 ---
 title: "React state 설계와 파생 state 줄이기"
-description: "합성 이벤트, 양방향 바인딩, controlled vs uncontrolled 판단 기준을 다룬다"
+description: "state/props 소유권, 파생 state 줄이기, 상태 끌어올림 기준을 정리"
 categories: ["🔵 React & Frontend"]
 tags: ["Events", "Forms", "Controlled", "Uncontrolled"]
 image: /assets/posts/2025-12-16-react/image.png
