--- a/_posts/2025-12-16-react-5.md
+++ b/_posts/2025-12-16-react-5.md
@@ -1,6 +1,6 @@
 ---
 title: "React 이벤트·입력 처리의 핵심 흐름"
-description: "key가 리스트 정체성을 보장하는 이유와 index key로 생기는 실무 버그를 설명"
+description: "합성 이벤트, 입력→state 흐름, controlled vs uncontrolled·폼 실수 방지 기준을 설명"
 categories: ["🔵 React & Frontend"]
 tags: ["Key", "List", "Identity", "Rendering"]
 image: /assets/posts/2025-12-16-react/image.png
