--- a/_posts/2025-12-16-react-6.md
+++ b/_posts/2025-12-16-react-6.md
@@ -1,6 +1,6 @@
 ---
 title: "React Key는 정체성의 문제다"
-description: "CSS, CSS Module, Styled-components, Tailwind를 협업과 유지보수 관점에서 비교"
+description: "key가 컴포넌트 정체성을 결정하고 index key가 만드는 실무 버그를 정리"
 categories: ["🔵 React & Frontend"]
 tags: ["Styling", "CSS", "Tailwind", "StyledComponents"]
 image: /assets/posts/2025-12-16-react/image.png
