--- a/_posts/2025-12-16-react-7.md
+++ b/_posts/2025-12-16-react-7.md
@@ -1,6 +1,6 @@
 ---
 title: "React 스타일링 선택 기준"
-description: "useRef, Portal, useImperativeHandle로 선언적 모델을 유지하며 예외를 처리하는 법"
+description: "CSS, CSS Module, Styled-components, Tailwind를 협업·유지보수 관점에서 비교"
 categories: ["🔵 React & Frontend"]
 tags: ["useRef", "Portal", "Imperative", "EscapeHatch"]
 image: /assets/posts/2025-12-16-react/image.png
