--- a/_posts/2025-12-16-react-8.md
+++ b/_posts/2025-12-16-react-8.md
@@ -1,6 +1,6 @@
 ---
 title: "React 선언형을 보완하는 예외 도구"
-description: "useEffect의 정체성, 의존성 배열 의미, 무한 루프 원인과 cleanup 규칙을 정리"
+description: "useRef·Portal·useImperativeHandle 등 선언형을 보완하는 예외 도구 사용 기준을 정리"
 categories: ["🔵 React & Frontend"]
 tags: ["useEffect", "SideEffect", "Dependencies", "Cleanup"]
 image: /assets/posts/2025-12-16-react/image.png
