--- a/_posts/2025-12-16-react-9.md
+++ b/_posts/2025-12-16-react-9.md
@@ -1,6 +1,6 @@
 ---
 title: "useEffect를 데이터 동기화로 이해하기"
-description: "렌더링 vs DOM 업데이트, memo/useCallback/useMemo 관계, 배칭과 스케줄링을 설명"
+description: "useEffect를 외부 세계 동기화 도구로 보고 의존성·cleanup·무한 루프를 해설"
 categories: ["🔵 React & Frontend"]
 tags: ["Rendering", "Performance", "memo", "useMemo"]
 image: /assets/posts/2025-12-16-react/image.png
